--- a/equipment/templates/equipment/equipment_upload_check.html
+++ b/equipment/templates/equipment/equipment_upload_check.html
@@ -15,14 +15,14 @@
                 <div class="equipment__contents form-row">
                     <div class="form-group col-md-12">
                         <div class="form-group">
+                            {% if err_equip_list|length != 0 %}
                             <table class="table table-striped table-bordered table-hover assets_table">
                                 <thead>
                                     <tr>
-                                        <th>Line 넘버</th>
-                                        <th>내용</th>
+                                        <th>행 번호</th>
+                                        <th>에러 내용</th>
                                     </tr>
                                 </thead>
-                                {% if err_equip_list|length != 0 %}
                                 {% for err in err_equip_list %}
                                 <tr>
                                     <td>{{err.no}}</td>
@@ -31,25 +31,31 @@
                                 {% endfor %}
                                 {% endif %}
 
-                                {% if err_equip_list|length == 0 %}
-                                <tr>
-                                    <td rowspan="2">정상적으로 내용들이 입력 되었습니다. 계속 진행 하시려면 등록 버튼을 눌러주세요</td>
-                                </tr>
-                                {% endif %}
                             </table>
+                            {% if err_equip_list|length == 0 %}
+                            <span>정상적으로 내용들이 입력 되었습니다. <br>계속 진행 하시려면 등록 버튼을 눌러주세요</span>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
-                {% if err_equip_list|length == 0 %}
+
                 <div class="text-right submit-box">
+                    {% if err_equip_list|length == 0 %}
                     <button type="button" class="btn btn-outline-danger" onclick="equipment_add_cancel()">
                         취소
                     </button>
                     <button type="submit" class="btn btn-outline-secondary" id="submit-btn">
                         등록
                     </button>
+                    {% else %}
+                    <button type="button" class="btn btn-outline-danger" id="submit-btn"
+                        onclick="returnEquipmentUpload();">
+                        돌아가기
+                    </button>
+                    {% endif %}
                 </div>
-                {% endif %}
+
+
             </form>
         </div>
     </div>
