[MODIFY] Login text

--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -42,7 +42,7 @@
               <i class="fa fa-lock"></i>
               <input type="password" name="member_pw" placeholder="패스워드입력" required />
             </div>
-            <button type="submit" class="btn btn-primary" id="login_btn">login</button>
+            <button type="submit" class="btn btn-primary" id="login_btn">Login</button>
           </div>
         </div>
       </div>
