--- a/sites/templates/sites/document_attach_detail.html
+++ b/sites/templates/sites/document_attach_detail.html
@@ -90,7 +90,8 @@
                 </div>
                 <div class="d-flex">
                     <div class="mr-auto p-2">
-                        <button type="button" class="btn btn-danger" id="report_delete" onclick="document_delete()">전체
+                        <button type="button" class="btn btn-danger" id="report_delete"
+                            onclick="documentDelete({{document.id}})">전체
                             삭제</button>
                     </div>
                     <div class="p-2">
