[REMOVE] Profile url

--- a/templates/base.html
+++ b/templates/base.html
@@ -96,7 +96,7 @@
       </ul>
       <ul class="navbar-nav navbar-right">
         <li class="nav-item profile">
-          <a href="{% url 'member_profile' %}" class="text-reset text-decoration-none profile-link">
+          <a href="#" class="text-reset text-decoration-none profile-link">
             {{request.session.member_name}} / {{request.session.member_rank}} / {{request.session.member_dept}}
           </a>
           <a href="{% url 'logout' %}">
