--- a/templates/base.html
+++ b/templates/base.html
@@ -69,6 +69,8 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{% url 'equipment_form' %}">제품등록</a>
             <a class="dropdown-item" href="{% url 'equipment_upload' %}">제품등록(대량)</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{% url 'equipment_info' %}">정보 조회</a>
           </div>
         </li>
         {% if request.session.member_dept in permission %}
