[ADD] Searching the information to add equipment

--- a/equipment/templates/equipment/equipment_upload.html
+++ b/equipment/templates/equipment/equipment_upload.html
@@ -34,10 +34,11 @@
                                             <li>고객사, 제조사, 제품명, 모델명</li>
                                             <li>예 시<br>
                                                 <i class="fa fa-arrow-circle-right"></i> "현대해상화재보험" 을 "현대해상" 으로 기입 시
-                                                정상적으로 등록이 되지 않습니다.</li>
+                                                정상적으로 등록이 되지 않습니다.<br>
+                                            </li>
                                             <li>정보 확인<br>
-                                                <i class="fa fa-arrow-circle-right"></i> 위의 4개 항목은 2번째 시트인 "DB 정보" 에
-                                                있습니다. </li>
+                                                <i class="fa fa-arrow-circle-right"></i> 위의 4개 항목은 장비현황관리 > DB정보 메뉴에서 확인
+                                                후 정확히 기입 바랍니다.</li>
                                         </ul>
                                     </li>
                                     <li>일정형식의 엑셀파일만 업로드가 가능합니다.</li>
