[MODFIY] Add margin of search div

--- a/static/css/equipment/equipment_info.css
+++ b/static/css/equipment/equipment_info.css
@@ -33,6 +33,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
+  margin-bottom: 10px;
 }
 
 .client__add .client__search:first-child {
