[MODFIY] Modify of comment

--- a/equipment/templates/equipment/equipment_upload.html
+++ b/equipment/templates/equipment/equipment_upload.html
@@ -40,7 +40,7 @@
                                                 정상적으로 등록이 되지 않습니다.<br>
                                             </li>
                                             <li>정보 확인<br>
-                                                <i class="fa fa-arrow-circle-right"></i> 위의 4개 항목은 장비현황관리 > 정보 조회 메뉴에서
+                                                <i class="fa fa-arrow-circle-right"></i> 위의 4개 항목은 "정보 조회" 메뉴에서
                                                 확인
                                                 후 정확히 기입 바랍니다.</li>
                                         </ul>
