--- a/templates/base.html
+++ b/templates/base.html
@@ -66,6 +66,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="{% url 'equipment_main' %}">고객사 운용제품현황</a>
+            <a class="dropdown-item" href="{% url 'equipment_stock' %}">재고 현황</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{% url 'equipment_form' %}">제품등록</a>
             <a class="dropdown-item" href="{% url 'equipment_upload' %}">제품등록(대량)</a>
