--- a/templates/base.html
+++ b/templates/base.html
@@ -62,16 +62,39 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
-            장비현황관리
+            납품등록관리
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="{% url 'equipment_main' %}">고객사 운용제품현황</a>
-            <a class="dropdown-item" href="{% url 'equipment_stock' %}">재고 현황</a>
+            <a class="dropdown-item" href="{% url 'equipment_main' %}">고객사 납품 현황</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="{% url 'equipment_form' %}">제품등록</a>
-            <a class="dropdown-item" href="{% url 'equipment_upload' %}">제품등록(대량)</a>
+            <a class="dropdown-item" href="{% url 'equipment_form' %}">납품 등록</a>
+            <a class="dropdown-item" href="{% url 'equipment_upload' %}">납품 등록(대량)</a>
           </div>
         </li>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            재고등록관리
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="{% url 'equipment_stock' %}">재고 현황</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{% url 'equipment_form' %}">재고 등록</a>
+            <a class="dropdown-item" href="{% url 'equipment_upload' %}">재고 등록(대량)</a>
+          </div>
+        </li>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            정보 조회
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="{% url 'equipment_info' %}">정보 조회</a>
+          </div>
+        </li>
+
         {% if request.session.member_dept in permission %}
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -85,16 +108,6 @@
           </div>
         </li>
         {% endif %}
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            정보 조회
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="{% url 'equipment_info' %}">정보 조회</a>
-          </div>
-        </li>
-
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
