--- a/equipment/templates/equipment/equipment_stock.html
+++ b/equipment/templates/equipment/equipment_stock.html
@@ -19,24 +19,22 @@
                                     <th>시리얼</th>
                                     <th>재고 위치</th>
                                     <th>입고 일자</th>
-                                    <th>담당 영업</th>
                                     <th>기 타</th>
                                 </tr>
                             </thead>
-                            {% for equipment in equipments %}
+                            {% for stock in stocks %}
                             <tr>
-                                <td>{{ equipment.mnfacture }}</td>
-                                <td>{{ equipment.product }}</td>
-                                <td>{{ equipment.product_model }}</td>
-                                <td>{{ equipment.serial }}</td>
-                                <td>{{ equipment.location }}</td>
-                                <td>{{ equipment.install_date }}</td>
-                                <td>{{ equipment.manager }}</td>
+                                <td>{{ stock.mnfacture }}</td>
+                                <td>{{ stock.product }}</td>
+                                <td>{{ stock.product_model }}</td>
+                                <td>{{ stock.serial }}</td>
+                                <td>{{ stock.location }}</td>
+                                <td>{{ stock.receive_date }}</td>
                                 <td>
-                                    {% if equipment.comments == "" %}
+                                    {% if stock.comments == "" %}
                                     -
                                     {% else %}
-                                    {{ equipment.comments }}
+                                    {{ stock.comments }}
                                     {% endif %}
                                 </td>
                             </tr>
@@ -45,10 +43,35 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
+
+<span class="badge badge-primary" data-toggle="modal" data-target="#exampleModal">Primary</span>
+
+
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
 {% endblock %} {% block title %} 재고 현황 {% endblock %}
