--- a/equipment/templates/equipment/equipment_upload.html
+++ b/equipment/templates/equipment/equipment_upload.html
@@ -31,6 +31,7 @@
                                 <h4>파일 업로드 시 주의사항</h4>
                                 <ul>
                                     <li>기본양식을 임의로 수정하여 업로드 하지 마세요.</li>
+                                    <li>파일 이름은 변경되어도 상관 없습니다.</li>
                                     <li>시트의 이름은 "장비운용현황" 의 이름을 사용해야 합니다.</li>
                                     <li>정보기입 중 아래의 4개 항목은 정확히 입력해야 합니다. (추후, 유의어를 등록하여 정상적으로 등록이 가능하게 개발할 예정)
                                         <ul>
