--- a/equipment/templates/equipment/equipment_stock.html
+++ b/equipment/templates/equipment/equipment_stock.html
@@ -19,23 +19,27 @@
                                     <th>시리얼</th>
                                     <th>재고 위치</th>
                                     <th>입고 일자</th>
-                                    <th>기 타</th>
+                                    <th>신청</th>
                                 </tr>
                             </thead>
+
                             {% for stock in stocks %}
                             <tr>
-                                <td>{{ stock.mnfacture }}</td>
+                                <td>
+                                    <a href="{% url 'equipment_stock_detail' stock_id=stock.id %}">
+                                        {{ stock.mnfacture }}
+                                    </a>
+                                </td>
                                 <td>{{ stock.product }}</td>
                                 <td>{{ stock.product_model }}</td>
                                 <td>{{ stock.serial }}</td>
                                 <td>{{ stock.location }}</td>
                                 <td>{{ stock.receive_date }}</td>
                                 <td>
-                                    {% if stock.comments == "" %}
-                                    -
-                                    {% else %}
-                                    {{ stock.comments }}
-                                    {% endif %}
+                                    <button type="button" class="btn btn-primary" data-toggle="modal"
+                                        data-target="#exampleModal"
+                                        onclick="stockApply('{{stock.id}}', '{{stock.mnfacture}}', '{{ stock.product }}', '{{ stock.product_model }}', '{{ stock.serial }}');">납품
+                                        신청</button>
                                 </td>
                             </tr>
                             {% endfor %}
@@ -47,26 +51,62 @@
     </div>
 </div>
 
-<span class="badge badge-primary" data-toggle="modal" data-target="#exampleModal">Primary</span>
-
-
-
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <h5 class="modal-title" id="exampleModalLongTitle">납품 신청 페이지</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
-                ...
-            </div>
+            <form class="modal-body" method="POST">
+                {% csrf_token %}
+                <input type="hidden" id="stock_id">
+                <div class="form-group">
+                    <label>고객사</label>
+                    {{equipment_form.client}}
+                </div>
+                <div class="form-group">
+                    <label>납품일자</label>
+                    <input type="text" name="install-date" id="equipment-install-date"
+                        class="form-control calendar__start hasDatepicker" autocomplete="off" data-provide="datepicker"
+                        placeholder="&#xf073;">
+                </div>
+                <div class="form-group">
+                    <label>담당 엔지니어 혹은 영업</label>
+                    <input type="text" class="form-control" id="manager" autocomplete="off" name="manager">
+                </div>
+                <div class="form-group">
+                    <label>납품 장소</label>
+                    <input type="text" class="form-control" id="location" autocomplete="off" name="location">
+                </div>
+                <div class="card">
+                    <h4 class="card-header">장비 정보</h4>
+                    <div class="card-body">
+                        <div class="form-group">
+                            <label>제조사</label>
+                            <input type="text" class="form-control" id="mnfacture" autocomplete="off" disabled>
+                        </div>
+                        <div class="form-group">
+                            <label>제품명</label>
+                            <input type="text" class="form-control" id="product" autocomplete="off" disabled>
+                        </div>
+                        <div class="form-group">
+                            <label>모델명</label>
+                            <input type="text" class="form-control" id="product-model" autocomplete="off" disabled>
+                        </div>
+                        <div class="form-group">
+                            <label>시리얼</label>
+                            <input type="text" class="form-control" id="serial" autocomplete="off" disabled>
+                        </div>
+                    </div>
+            </form>
+
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-outline-danger" data-dismiss="modal">닫기</button>
+                <button type="button" class="btn btn-outline-success" onclick="valueCheck()">납품 신청</button>
             </div>
         </div>
     </div>
@@ -77,11 +117,17 @@
 {% endblock %} {% block title %} 재고 현황 {% endblock %}
 {% block css %}
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
-<link rel="stylesheet" href="{% static 'css/equipment.css' %}">
+<link rel="stylesheet" href="{% static 'css/selectpicker/bootstrap-select.css' %}">
+<link rel="stylesheet" href="{% static 'css/datepicker/datepicker3.css' %}">
 {% endblock %}
 
 {% block js %}
 <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
+<script src="{% static 'js/selectpicker/bootstrap-select.js' %}"></script>
+<script src="{% static 'js/datepicker/bootstrap-datepicker.js' %}"></script>
+<script src="{% static 'js/datepicker/bootstrap-datepicker.kr.js' %}"></script>
+<script src="{% static 'js/datepicker/datepicker.js' %}"></script>
+<script src="{% static 'js/equipment/stock.js' %}"></script>
 <script src="{% static 'js/datatable/dataTable.js' %}"></script>
 {% endblock %}
