[MODIFY] renamed table name

--- a/equipment/templates/equipment/equipment_form.html
+++ b/equipment/templates/equipment/equipment_form.html
@@ -3,7 +3,7 @@
     <div class="card sites">
         <div class="card-header sites__header">
             <i class="fa fa-tasks"></i>
-            <h5 class="card-title sites__title">&nbsp;제품 등록</h5>
+            <h5 class="card-title sites__title">&nbsp;납품 등록</h5>
         </div>
         <div class="card-body">
             <form class="equipment__form" name="ajaxForm" id="ajaxForm" method="POST"
@@ -80,7 +80,7 @@
 </div>
 
 
-{% endblock %} {% block title %} 제품 등록 {% endblock %}
+{% endblock %} {% block title %} 납품 등록 {% endblock %}
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/selectpicker/bootstrap-select.css' %}">
 <link rel="stylesheet" href="{% static 'css/datepicker/datepicker3.css' %}">
