[ADD] stock css

--- a/static/css/equipment.css
+++ b/static/css/equipment.css
@@ -1,3 +1,4 @@
 @import "./equipment/equipment_main.css";
 @import "./equipment/equipment_upload.css";
 @import "./equipment/equipment_info.css";
+@import "./equipment/equipment_stock.css";
