--- a/equipment/templates/equipment/equipment_upload.html
+++ b/equipment/templates/equipment/equipment_upload.html
@@ -3,7 +3,7 @@
     <div class="card equipment ">
         <div class="card-header document__header">
             <i class="fa fa-external-link"></i>
-            <h5 class="card-title equipment__title">&nbsp;운영제품 등록 (Excel)</h5>
+            <h5 class="card-title equipment__title">&nbsp;납품 등록 (Excel)</h5>
         </div>
         <div class="card-body">
             <div class="equipment__contents form-row">
