--- a/equipment/templates/equipment/equipment_stock.html
+++ b/equipment/templates/equipment/equipment_stock.html
@@ -10,7 +10,16 @@
             <div class="equipment__contents form-row">
                 <div class="form-group col-md-12">
                     <div class="form-group">
-                        <table class="table table-striped table-bordered table-hover assets_table " id="myTable1">
+                        <div class="form-group">
+                            <button type="button" class="btn btn-outline-primary" data-toggle="modal"
+                                id="selectSubmitStocks" data-target="#exampleModal" onclick="checkSelectedStocks()">일괄
+                                납품</button>
+                            <button type="button" class="btn btn-outline-danger" data-toggle="modal"
+                                data-target="#delete-modal" onclick="deleteStocks()">
+                                일괄 삭제
+                            </button>
+                        </div>
+                        <table class="table table-striped table-bordered table-hover assets_table " id="stock-table">
                             <thead>
                                 <tr>
                                     <th>선택</th>
@@ -23,14 +32,12 @@
                                     <th>신청</th>
                                 </tr>
                             </thead>
-
                             {% for stock in stocks %}
                             <tr>
-                                <td class="td-checkBox" onclick="checkTheBox(event)">
-                                    <div class="form-check" id="form-check">
-                                        <input class="form-check-input position-static" type="checkbox"
-                                            id="blankCheckbox" value="option1">
-                                    </div>
+                                <td class="td-checkBox" onclick="checkTheBox(event)" id="td-checkbox">
+                                    <input class="form-check-input position-static" type="checkbox" id="blankCheckbox"
+                                        value="{{stock.id}}">
+
                                 </td>
                                 <td>
                                     <a href="{% url 'equipment_stock_detail' stock_id=stock.id %}">
@@ -45,7 +52,7 @@
                                 <td>
                                     <button type="button" class="btn btn-primary" data-toggle="modal"
                                         data-target="#exampleModal"
-                                        onclick="stockApply('{{stock.id}}', '{{stock.mnfacture}}', '{{ stock.product }}', '{{ stock.product_model }}', '{{ stock.serial }}');">납품
+                                        onclick="stockApply('{{stock.id}}', '{{stock.mnfacture}}', '{{ stock.product }}', '{{ stock.product_model }}', '{{ stock.serial }}', '{{ stock.receive_date }}');">납품
                                     </button>
                                 </td>
                             </tr>
@@ -61,14 +68,14 @@
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
-        <div class="modal-content">
+        <div class="modal-content" id="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLongTitle">납품 신청 페이지</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form class="modal-body" method="POST">
+            <form class="modal-body" method="POST" id="modal-body">
                 {% csrf_token %}
                 <input type="hidden" id="stock_id">
                 <div class="form-group">
@@ -89,31 +96,115 @@
                     <label>납품 장소</label>
                     <input type="text" class="form-control" id="location" autocomplete="off" name="location">
                 </div>
-                <div class="card">
-                    <h4 class="card-header">장비 정보</h4>
-                    <div class="card-body">
-                        <div class="form-group">
-                            <label>제조사</label>
-                            <input type="text" class="form-control" id="mnfacture" autocomplete="off" disabled>
-                        </div>
-                        <div class="form-group">
-                            <label>제품명</label>
-                            <input type="text" class="form-control" id="product" autocomplete="off" disabled>
-                        </div>
-                        <div class="form-group">
-                            <label>모델명</label>
-                            <input type="text" class="form-control" id="product-model" autocomplete="off" disabled>
-                        </div>
-                        <div class="form-group">
-                            <label>시리얼</label>
-                            <input type="text" class="form-control" id="serial" autocomplete="off" disabled>
+                <div class="card single-delivery" id="single-delivery">
+                    <h5 class="card-header single-delivery__header">장비 정보</h5>
+                    <div class="card-body single-delivery__body">
+                        <div class="media single-delivery__media">
+                            <i class="fa fa-hdd-o"></i>
+                            <div class="media-body">
+                                <h5 class="mt-0" id="media-title"></h5>
+                                <ul class="list-group list-group-flush" id="stock-info">
+                                    <li id="stock-product"></li>
+                                    <li id="stock-product-model"></li>
+                                    <li id="stock-serial"></li>
+                                    <li id="stock-receive-date"></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
+                </div>
+                <div class="card multi-delivery" id="multi-delivery">
+                    <h5 class="card-header multi-delivery__header">장비 정보</h5>
+                    <div class="card-body multi-delivery__body">
+                        <div class="media multi-delivery__media">
+                            <i class="fa fa-hdd-o"></i>
+                            <div class="media-body">
+                                <div id="accordion">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </form>
-
             <div class="modal-footer">
                 <button type="button" class="btn btn-outline-danger" data-dismiss="modal">닫기</button>
-                <button type="button" class="btn btn-outline-success" onclick="valueCheck()">납품 신청</button>
+                <button type="button" class="btn btn-outline-primary" id="sumbit-btn" onclick="valueCheck()">납품
+                    신청</button>
+            </div>
+        </div>
+        <div class="modal-content waring-content" id="waring-content">
+            <div class="modal-header waring-header" id="waring-header">
+                <h5 class="modal-title waring-title" id="waring-header">❗ 일괄 신청 오류</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body waring-body" id="waring-body">
+                <div class="alert alert-danger" role="alert">
+                    ❌ 재고가 선택되지 않았습니다.<br><br>✔ 체크박스 선택 후 다시 일괄납품을 신청하세요.
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-danger" data-dismiss="modal">돌아가기</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<div class="modal fade" id="delete-modal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content" id="delete-select-error">
+            <div class="modal-header">
+                <h5 class="modal-title">일괄 삭제</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="alert alert-danger" role="alert">
+                    ❌ 재고가 선택되지 않았습니다.<br><br>✔ 체크박스 선택 후 일괄 삭제를 신청하세요.
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-danger" data-dismiss="modal">돌아가기</button>
+            </div>
+        </div>
+
+        <div class="modal-content" id="delete-success">
+            <div class="modal-header">
+                <h5 class="modal-title">일괄 삭제</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="alert alert-warning" role="alert">
+                    ⚠ 선택된 재고는 전부 삭제처리 됩니다.<br><br>🗑 계속 진행하시려면 하단의 일괄 삭제 버튼을 눌러주세요.
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-danger" data-dismiss="modal"
+                    onclick="stockMultiDelete()">일괄
+                    삭제</button>
+            </div>
+        </div>
+
+        <div class="modal-content" id="delete-permission-denied">
+            <div class="modal-header">
+                <h5 class="modal-title ">일괄 삭제</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id='permission-denied-body'>
+                <div class="alert alert-danger" role="alert">
+                    ❌ 선택된 재고는 해당 사용자가 삭제 할 수 없습니다.<br><br>👇 아래에서 권한이 없는 재고를 확인해주세요.
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-danger" data-dismiss="modal">돌아가기</button>
             </div>
         </div>
     </div>
