[REMOVE] Equipment test menu

--- a/templates/base.html
+++ b/templates/base.html
@@ -69,8 +69,8 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{% url 'equipment_form' %}">납품 등록</a>
             <a class="dropdown-item" href="{% url 'equipment_upload' %}">납품 등록(대량)</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="{% url 'equipment_test' %}">납품 테스트 페이지</a>
+            <!-- <div class="dropdown-divider"></div> -->
+            <!-- <a class="dropdown-item" href="{% url 'equipment_test' %}">납품 테스트 페이지</a> -->
           </div>
         </li>
 
