[MODFIY] Page content title

--- a/equipment/templates/equipment/equipment_main.html
+++ b/equipment/templates/equipment/equipment_main.html
@@ -4,7 +4,7 @@
     <div class="card equipment">
         <div class="card-header document__header">
             <i class="fa fa-external-link"></i>
-            <h5 class="card-title equipment__title">&nbsp;운영장비 현황</h5>
+            <h5 class="card-title equipment__title">&nbsp;납품 현황</h5>
         </div>
         <div class="card-body">
             <div class="equipment__contents form-row">
