--- a/equipment/templates/equipment/equipment_upload_check.html
+++ b/equipment/templates/equipment/equipment_upload_check.html
@@ -4,7 +4,7 @@
     <div class="card equipment">
         <div class="card-header document__header">
             <i class="fa fa-external-link"></i>
-            <h5 class="card-title equipment__title">&nbsp;운영제품 등록 (Excel)</h5>
+            <h5 class="card-title equipment__title">&nbsp;납품 등록 (Excel)</h5>
         </div>
         <div class="card-body">
             <form class="equipment__add" name="ajaxform" id="ajaxform" method="POST"
